# Gobang

./: CMakeLists.txt
headers/: Board.h  GameControl.h  Menu.h  Player.h  Referee.h  System.h
sources/: Board.cpp  GameControl.cpp  Menu.cpp  Player.cpp  Referee.cpp  System.cpp  main.cpp
